# zchat-protocol

./: .gitignore  LICENSE  pyproject.toml
.artifacts/bootstrap/: bootstrap-report.md  env-report.json  manifest.json  test-baseline.json
.artifacts/bootstrap/module-reports/: encoding.json  meta.json  naming.json  tests.json  ws_messages.json
.artifacts/coverage/: coverage-matrix.md
.github/workflows/: publish.yml
tests/: test_irc_encoding.py  test_naming.py  test_sys_messages.py  test_ws_messages.py
zchat_protocol/: __init__.py  commands.py  conversation.py  event.py  gate.py  irc_encoding.py  message_types.py  mode.py  naming.py  participant.py  sys_messages.py  timer.py  ws_messages.py
